--- a/src/busquedaOrdenamiento/busquedaOrdenamiento/busquedaOrdenamiento.vcxproj
+++ b/src/busquedaOrdenamiento/busquedaOrdenamiento/busquedaOrdenamiento.vcxproj
@@ -19,17 +19,17 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="randomgen.h" />
-    <ClInclude Include="search.h" />
-    <ClInclude Include="sort.h" />
-    <ClInclude Include="view.h" />
+    <ClInclude Include=".h\randomgen.h" />
+    <ClInclude Include=".h\search.h" />
+    <ClInclude Include=".h\sort.h" />
+    <ClInclude Include=".h\view.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="randomgen.cpp" />
-    <ClCompile Include="search.cpp" />
-    <ClCompile Include="Sort.cpp" />
-    <ClCompile Include="view.cpp" />
+    <ClCompile Include=".cpp\main.cpp" />
+    <ClCompile Include=".cpp\randomgen.cpp" />
+    <ClCompile Include=".cpp\search.cpp" />
+    <ClCompile Include=".cpp\Sort.cpp" />
+    <ClCompile Include=".cpp\view.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
